# dlrippyr

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  _version.py  dlrippyr.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tools.py  x265-1080p-mkv-preset.json  x265-1080p-mkv.json
dlrippyr/: __init__.py  classes.py  cli.py  convert.py  features.py  file.py  info.py  sample.py  utils.py
docs/: conf.py  index.rst
src/: dlrippyr.py  tools.py
src/dlrippyr/: info.py  utils.py
test/: test_file.py  tests.py
test/dirtree/data/dummies-06/dir-01/sub-01/: sample2.mkv
tests/: conftest.py
