[metadata]
name = dlrippyr
author = HeadCase
author-email = gheadley27@gmail.com
summary = Pythonic HandBrake wrapper for converting AVC to HEVC
license = GNUv3
description = README.md
requires-python = >=3.0

[options]
include_package_data = True
packages = find:
install_requires =
  wheel>=0.3
  click>=8.0
python_requires = >=3.6

[options.entry_points]
console_scripts =
    dlrippyr = dlrippyr.cli:cli

